[package]
name = "ydnc-time"
version = "0.1.0"
authors = ["Jonathan Ming"]
edition = "2021"
description = "You don't need the cloud to log your time"
repository = "https://github.com/jming422/ydnc-time"
license = "Apache-2.0 WITH LLVM-exception"
keywords = ["cli", "dashboard", "terminal", "time", "tui"]
categories = ["command-line-utilities", "date-and-time", "visualization"]
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.24"
ron = "0.7"
serde = { version = "1", features = ["derive"] }
tui = "0.18"
