[package]
name = "ydnc-time"
version = "0.2.0"
authors = ["Jonathan Ming"]
edition = "2021"
description = "You don't need the cloud to log your time"
repository = "https://github.com/jming422/ydnc-time"
license = "Apache-2.0 WITH LLVM-exception"
keywords = ["terminal", "time", "tui", "dashboard"]
categories = ["command-line-utilities", "date-and-time", "visualization"]
exclude = ["/screenshots"]

[dependencies]
anyhow = "1"
btleplug = "0.10"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.25"
directories = "4"
lazy_static = "1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui = "0.19"
uuid = "1"
